<resources>
    <string name="app_name">Prototype_1</string>
    <string name="action_settings">Settings</string>
    <string name="choose_conditions">Choose the weather conditions in which you want the alarm to remain silent</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="weather_button">Switch Weather Conditions</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="tom_weather">Tomorrow\'s Forecast</string>
    <string name="title_activity_maps">Map</string>
    <string name="hour">hour</string>
    <string name="blizzard">Blizzard</string>
    <string name="Map">Map</string>
</resources>
